--- a/src/Pomodoro.UI/Pages/Labels/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Labels/Index.cshtml
@@ -9,18 +9,32 @@
 </div> *@
 
 <div class="d-flex justify-content-between align-items-end mb-3">
-    <h5 class="my-0">Edit Labels</h5>
-    <div>
-        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addLabelModal">New Label</button>
-    </div>
+    <h5 class="my-0">Labels</h5>
 </div>
 
 
 <div>
     <ul class="list-group">
-
-            @for(int i = 0; i < Model.TaskLabels.Count(); i++)
-            {
+        <li class="list-group-item bg-body-tertiary">
+            <div class="row align-items-center">
+                <div class="d-flex align-items-center justify-content-between">
+                    <div class="col-md-3">
+                        <span><strong>Label</strong></span>
+                    </div>
+                    <div class="d-none d-md-block col-md-4">
+                        <span><strong>Description</strong></span>
+                    </div>
+                    <div class="d-none d-lg-block col-md-2">
+                        <span><strong># of Task</strong></span>
+                    </div>
+                    <div class="col-md-2 text-end text-nowrap">
+                        <span><strong>Actions</strong></span>
+                    </div>
+                </div>
+            </div>
+        </li>
+        @for(int i = 0; i < Model.TaskLabels.Count(); i++)
+        {
             <li class="list-group-item">
                 <div class="row align-items-center">
                     <div class="d-flex align-items-center justify-content-between">
@@ -33,9 +47,20 @@
                         <div class="d-none d-lg-block col-md-2">
                             <span class="text-muted">@Model.TaskLabels[i].StudyTasks.Count() tasks</span>
                         </div>
-                        <div class="col-md-3 text-end text-nowrap">
-                            <button class="btn btn-sm btn-secondary" data-bs-toggle="modal" data-bs-target="#editLabelModal-@Model.TaskLabels[i].Id">Edit</button>
-                            <button class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#deleteLabelModal-@Model.TaskLabels[i].Id">Delete</button>
+                        <div class="col-md-2 text-end text-nowrap">
+                            <div class="d-flex align-items-center justify-content-end">
+                                <div class="dropdown">
+                                    <i style="cursor: pointer" class="text-secondary bi bi-three-dots" data-bs-toggle="dropdown" aria-expanded="false"></i>
+                                    <ul class="dropdown-menu">
+                                        <li>
+                                            <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#editLabelModal-@Model.TaskLabels[i].Id">Edit</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#deleteLabelModal-@Model.TaskLabels[i].Id">Delete</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -44,12 +69,12 @@
                 <div class="modal fade" id="editLabelModal-@Model.TaskLabels[i].Id" tabindex="-1" aria-labelledby="editLabelModalLabel-@Model.TaskLabels[i].Id" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="addLabelModalLabel">Edit Label</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body" x-data="{ name: '@Model.TaskLabels[i].Name', color: '@Model.TaskLabels[i].HexColor', isValid: true }">
-                                <form method="post" asp-page-handler="Update">
+                            <form method="post" asp-page-handler="Update">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="addLabelModalLabel">Edit Label</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body" x-data="{ name: '@Model.TaskLabels[i].Name', color: '@Model.TaskLabels[i].HexColor', isValid: true }">
                                     <input type="hidden" asp-for="TaskLabelUpdate.Id" value="@Model.TaskLabels[i].Id" />
                                     <div class="mb-3">
                                         <label asp-for="TaskLabelUpdate.Name" class="form-label">Name</label>
@@ -74,10 +99,13 @@
                                     <div class="mb-3">
                                         <span>Preview:</span>
                                         <span class="badge" :style="'background-color: ' + color" x-text="name"></span>
-                                    </div>
+                                    </div>     
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                                     <button type="submit" class="btn btn-primary">Save</button>
-                                </form>
-                            </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -103,7 +131,25 @@
                     </div>
                 </div>
             </li>
-            }
+        }
+        <li class="list-group-item custom-hover">
+            <a data-bs-toggle="modal" data-bs-target="#addLabelModal" class="row align-items-center">
+                <div class="d-flex align-items-center justify-content-between">
+                    <div class="col-md-3">
+                        <i class="bi bi-plus"></i>
+                        <span class="ext-decoration-none text-opacity-50">Add New Label</span>
+                    </div>
+                    <div class="d-none d-md-block col-md-4">
+                        <span class="text-opacity-50">Description...</span>
+                    </div>
+                    <div class="d-none d-lg-block col-md-2">
+                        <span class="text-opacity-50">Count...</span>
+                    </div>
+                    <div class="col-md-2 text-end text-nowrap">
+                    </div>
+                </div>
+            </a>
+        </li>
     </ul>
 
 
