--- a/src/Pomodoro.UI/Pages/Manage/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Index.cshtml
@@ -96,84 +96,90 @@
     </div>
 </div>
 
-
-<div class="mb-2">
-    <div class="d-flex justify-content-between align-items-end mb-3">
-        <h5 class="mb-0">Tasks Due Next</h5>
-        @* <a class="btn btn-primary" asp-page="/Timer/Index"><i class="bi bi-clock me-2"></i>Start Study Session</a> *@
-    </div>
-    <ul class="list-group">
-        <li class="list-group-item bg-body-tertiary">
-            <div class="row align-items-center">
-                <div class="d-flex align-items-center justify-content-between">
-                    <div class="col-md-5">
-                        <span><strong>Task</strong></span>
-                    </div>
-                    <div class="d-none d-md-block col-md-4">
-                        <span><strong>Due</strong></span>
-                    </div>
-                    <div class="d-none d-lg-block col-md-1">
-                        <span><strong>Course</strong></span>
-                    </div>
-                    <div class="col-md-2 text-end text-nowrap">
-                        <span><strong>Actions</strong></span>
-                    </div>
-                </div>
-            </div>
-        </li>
-        @foreach (var task in Model.StudyTasks.Next(5))
-        {
-            <li class="list-group-item">
+@{
+    var nextTasks = Model.StudyTasks.Next(5);
+}
+@if (nextTasks.Count() > 0)
+{
+    <div class="mb-2">
+        <div class="d-flex justify-content-between align-items-end mb-3">
+            <h5 class="mb-0">Tasks Due Next</h5>
+            @* <a class="btn btn-primary" asp-page="/Timer/Index"><i class="bi bi-clock me-2"></i>Start Study Session</a> *@
+        </div>
+        <ul class="list-group">
+            <li class="list-group-item bg-body-tertiary">
                 <div class="row align-items-center">
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="col-md-5">
-                            <study-task-link task="@task"></study-task-link>
-                            @foreach(var label in task.TaskLabels)
-                            {
-                                <badge text="@label.Name" color="@label.HexColor"></badge>
-                            }
+                            <span><strong>Task</strong></span>
                         </div>
                         <div class="d-none d-md-block col-md-4">
-                            <span class="text-muted">@task.Deadline.Humanize()</span>
+                            <span><strong>Due</strong></span>
                         </div>
                         <div class="d-none d-lg-block col-md-1">
-                            @if (task.Course != null)
-                            {
-                                <badge text="@task.Course.Name" color="@task.Course.HexColor"></badge>
-                            }
+                            <span><strong>Course</strong></span>
                         </div>
-                        <div class="col-md-2">
-                            <div class="d-flex align-items-center justify-content-end">
-                                <div class="dropdown">
-                                    <i style="cursor: pointer" class="text-secondary bi bi-three-dots" data-bs-toggle="dropdown" aria-expanded="false"></i>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="@($"#{StudyTaskModalHelper.GetEditModalId(task.Id)}")">Edit</a></li>
-                                        <li>
-                                            <form method="post">
-                                                <button type="submit" class="dropdown-item" asp-page-handler="ArchiveStudyTask" asp-route-studyTaskId="@task.Id">Delete</button>
-                                            </form>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
+                        <div class="col-md-2 text-end text-nowrap">
+                            <span><strong>Actions</strong></span>
                         </div>
                     </div>
                 </div>
             </li>
-        }
-    </ul>
-    @foreach (var task in Model.StudyTasks)
-    {
-        @await Html.PartialAsync("/Pages/Shared/Snippets/StudyTaskSnippets/_EditStudyTaskModal.cshtml", new EditStudyTaskVM
+            @foreach (var task in nextTasks)
+            {
+                <li class="list-group-item">
+                    <div class="row align-items-center">
+                        <div class="d-flex align-items-center justify-content-between">
+                            <div class="col-md-5">
+                                <study-task-link task="@task"></study-task-link>
+                                @foreach (var label in task.TaskLabels)
+                                {
+                                    <badge text="@label.Name" color="@label.HexColor"></badge>
+                                }
+                            </div>
+                            <div class="d-none d-md-block col-md-4">
+                                <span class="text-muted">@task.Deadline.Humanize()</span>
+                            </div>
+                            <div class="d-none d-lg-block col-md-1">
+                                @if (task.Course != null)
+                                {
+                                    <badge text="@task.Course.Name" color="@task.Course.HexColor"></badge>
+                                }
+                            </div>
+                            <div class="col-md-2">
+                                <div class="d-flex align-items-center justify-content-end">
+                                    <div class="dropdown">
+                                        <i style="cursor: pointer" class="text-secondary bi bi-three-dots" data-bs-toggle="dropdown" aria-expanded="false"></i>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="@($"#{StudyTaskModalHelper.GetEditModalId(task.Id)}")">Edit</a></li>
+                                            <li>
+                                                <form method="post">
+                                                    <button type="submit" class="dropdown-item" asp-page-handler="ArchiveStudyTask" asp-route-studyTaskId="@task.Id">Delete</button>
+                                                </form>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            }
+        </ul>
+        @foreach (var task in Model.StudyTasks)
         {
-            TimeZone = Model.TimeZone,
-            StudyTask = task,
-            StudyTaskUpdate = new StudyTaskUpdate(),
-            TaskLabels = Model.TaskLabels,
-            TaskPriorities = Model.TaskPriorities
-        })
-    }
-</div>
+            @await Html.PartialAsync("/Pages/Shared/Snippets/StudyTaskSnippets/_EditStudyTaskModal.cshtml", new EditStudyTaskVM
+            {
+                TimeZone = Model.TimeZone,
+                StudyTask = task,
+                StudyTaskUpdate = new StudyTaskUpdate(),
+                TaskLabels = Model.TaskLabels,
+                TaskPriorities = Model.TaskPriorities
+            })
+        }
+    </div>
+}
+
 
 @section Scripts {
 
