Modified default behaviour of GetAllAsync() in StudyTaskService to return only un-archived tasks.

--- a/src/Pomodoro.UI/Pages/Manage/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Index.cshtml
@@ -71,7 +71,7 @@
                             </div>
 
                             <div class="mt-3 d-flex align-items-center justify-content-between">
-                                <small class="text-muted">Incomplete Tasks: @(course.StudyTasks.Count(t => !t.Completed))</small>
+                                <small class="text-muted">Incomplete Tasks: @(course.StudyTasks.Count(t => !t.Completed && !t.Archived))</small>
                             </div>
                         </div>
                     </div>
