--- a/src/Pomodoro.UI/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
+++ b/src/Pomodoro.UI/Pages/Timer/Partials/_StudyTaskUpdate.cshtml
@@ -40,17 +40,9 @@
         <div class="collapse" :class="hideMoreOptions ? 'hide' : 'show'" id="extra-options-edit">
             <div class="mb-2">
                 <label asp-for="StudyTaskUpdate.TaskPriorityId" class="form-label">Priority:</label>
-                <div class="form-check">
-                    <input checked class="form-check-input" type="radio" asp-for="StudyTaskUpdate.TaskPriorityId" value="" id="none-edit" />
-                    <label class="form-check-label text-opacity-75" for="none-edit">None</label>
-                </div>
-                @foreach (var priority in Model.TaskPriorities)
-                {
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" asp-for="StudyTaskUpdate.TaskPriorityId" value="@priority.Id" id="@(priority.Id)-edit" />
-                        <label class="form-check-label" for="@(priority.Id)-edit">@priority.Level</label>
-                    </div>
-                }
+                <select class="form-control form-control-sm" asp-for="StudyTaskUpdate.TaskPriorityId" asp-items="@Model.TaskPriorities">
+                    <option value="">None</option>
+                </select>
                 <span asp-validation-for="StudyTaskUpdate.TaskPriorityId" class="text-danger form-text"></span>
             </div>
             <div class="mb-2">
