--- a/src/Pomodoro.UI/Pages/Timer/Partials/_StudyTaskCreate.cshtml
+++ b/src/Pomodoro.UI/Pages/Timer/Partials/_StudyTaskCreate.cshtml
@@ -37,13 +37,9 @@
         <div class="collapse" :class="hideMoreOptions ? 'hide' : 'show'" id="extra-options">
             <div class="mb-2">
                 <label asp-for="StudyTaskCreate.TaskPriorityId" class="form-label">Priority:</label>
-                @foreach (var priority in Model.TaskPriorities)
-                {
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" asp-for="StudyTaskCreate.TaskPriorityId" value="@priority.Id" id="@(priority.Id)-create" />
-                        <label class="form-check-label" for="@(priority.Id)-create">@priority.Level</label>
-                    </div>
-                }
+                <select class="form-control form-control-sm" asp-for="StudyTaskCreate.TaskPriorityId" asp-items="@Model.TaskPriorities">
+                    <option value="">None</option>
+                </select>
                 <span asp-validation-for="StudyTaskCreate.TaskPriorityId" class="text-danger form-text"></span>
             </div>
             <div class="mb-2">
