Task edit modals now show additional options by default, closes #61.

--- a/src/Pomodoro.UI/Pages/Shared/Snippets/StudyTaskSnippets/_EditStudyTaskModal.cshtml
+++ b/src/Pomodoro.UI/Pages/Shared/Snippets/StudyTaskSnippets/_EditStudyTaskModal.cshtml
@@ -28,7 +28,7 @@
                         clearSelectedLabels() {
                         this.selectedLabels = [];
                         },
-                        hideMoreOptions: true
+                        hideMoreOptions: false
                         }"
                         >
                         <div class="modal-body">
