Only tasks completed on the current date now show in the completed section in timer page, closes #63.

--- a/src/Pomodoro.UI/Pages/Timer/Partials/_CompletedStudyTasks.cshtml
+++ b/src/Pomodoro.UI/Pages/Timer/Partials/_CompletedStudyTasks.cshtml
@@ -9,7 +9,7 @@
 @model Pomodoro.UI.Pages.Timer.IndexModel
 
 @{
-    var completedTasks = Model.StudyTasks.Where(u => u.Completed && !u.Archived).ToList();
+    var completedTasks = Model.StudyTasks.Where(u => u.Completed && !u.Archived && u.DateCompleted!.Value.Date == DateTime.UtcNow.Date).ToList();
 }
 
 @if (completedTasks.Count == 0)
