--- a/src/Pomodoro.UI/Pages/Timer/Partials/_AllStudyTasks.cshtml
+++ b/src/Pomodoro.UI/Pages/Timer/Partials/_AllStudyTasks.cshtml
@@ -31,11 +31,11 @@
         </div>
 
     </div>
-    @if (Model.StudyTasks.Any(u => u.Completed && !u.Archived))
+    @if (Model.StudyTasks.Any(u => u.Completed && !u.Archived && u.DateCompleted!.Value.Date == DateTime.UtcNow.Date))
     {
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-end mb-3" style="height: 40px">
-                <h5 class="mb-0 me-2">Completed Tasks</h5>
+                <h5 class="mb-0 me-2">Todays Completed Tasks</h5>
             </div>
             <div id="completed-tasks">
                 @await Html.PartialAsync("Partials/_CompletedStudyTasks")
