--- a/src/Pomodoro.UI/Pages/Timer/Partials/_AllStudyTasks.cshtml
+++ b/src/Pomodoro.UI/Pages/Timer/Partials/_AllStudyTasks.cshtml
@@ -35,7 +35,7 @@
     {
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-end mb-3" style="height: 40px">
-                <h5 class="mb-0 me-2">Todays Completed Tasks</h5>
+                <h5 class="mb-0 me-2">Completed Today</h5>
             </div>
             <div id="completed-tasks">
                 @await Html.PartialAsync("Partials/_CompletedStudyTasks")
