Home page is now manage. Added link to timer page, closes #77.

--- a/src/Pomodoro.UI/Pages/Manage/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Index.cshtml
@@ -106,7 +106,7 @@
     <div class="mb-2">
         <div class="d-flex justify-content-between align-items-end mb-3">
             <h5 class="mb-0">Tasks Due Next</h5>
-            @* <a class="btn btn-primary" asp-page="/Timer/Index"><i class="bi bi-clock me-2"></i>Start Study Session</a> *@
+            <a class="" asp-page="/Timer/Index"><i class="bi bi-clock me-2"></i>Start Study Session</a>
         </div>
         <ul class="list-group">
             <li class="list-group-item bg-body-tertiary">
