--- a/src/Pomodoro.UI/Pages/Manage/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Index.cshtml
@@ -229,7 +229,7 @@
 <div class="mb-2">
     <div class="d-flex justify-content-between align-items-end mb-3">
         <h5 class="mb-0">Tasks Due Next</h5>
-        @if (Model.StudyTasks.Count > 0)
+        @if (Model.StudyTasks.Where(u => !u.Completed).Count() > 0)
         {
             <a asp-page="/Timer/Index"><i class="bi bi-clock me-2"></i>Start Study Session</a>
         }
@@ -297,7 +297,7 @@
                 </div>
             </li>
         }
-        @if (Model.StudyTasks.Count == 0)
+        @if (Model.StudyTasks.Where(u => !u.Completed).Count() == 0)
         {
             <li class="list-group-item custom-hover">
                 <a data-bs-toggle="modal" data-bs-target="#study-task-create-modal" class="row align-items-center">
