--- a/src/Pomodoro.UI/Pages/Shared/_Layout.cshtml
+++ b/src/Pomodoro.UI/Pages/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             visibility: hidden;
         }
     </style>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='%23FFFFFF' d='M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zM1 8a7 7 0 0 1 7-7 3.5 3.5 0 1 1 0 7 3.5 3.5 0 1 0 0 7 7 7 0 0 1-7-7zm7-4.3a3.2 3.2 0 1 1 0 6.4 3.2 3.2 0 0 1 0-6.4zM9 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0z'/></svg>">
     <link rel="stylesheet" href="~/lib/bootstrap/scss/custom.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Pomodoro.UI.styles.css" asp-append-version="true" />
