--- a/src/Pomodoro.UI/Pages/Manage/Tasks/All.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Tasks/All.cshtml
@@ -4,8 +4,8 @@
 @using Pomodoro.Library.Models.Tables.StudyTaskEntities
 @using Pomodoro.UI.Pages.Shared.Snippets.StudyTaskSnippets
 @using Pomodoro.UI.ViewModels
+@model Pomodoro.UI.Pages.Manage.Tasks.AllModel
 @inject IMapper mapper
-@model Pomodoro.UI.Pages.Manage.IndexModel
 @{
 }
 
@@ -126,116 +126,10 @@
     </div>
 </div>
 
-<div class="modal fade" id="course-create-modal" tabindex="-1" aria-labelledby="courseModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header mb-3">
-                <h5 class="modal-title" id="courseModalLabel">Add a Course</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="mb-1 px-3">
-                <small>Fill in the fields below to start adding tasks to this course.</small>
-            </div>
-            <hr class="text-secondary mb-0" />
-            <form method="post" asp-page-handler="CreateCourse">
-                <div class="modal-body" x-data="{ name: '', color: '#385091', isValid: true }">
-                    <div class="mb-3">
-                        <label asp-for="CourseCreate.Name" class="form-label"></label>
-                        <input x-model="name" asp-for="CourseCreate.Name" class="form-control form-control-sm" />
-                        <span asp-validation-for="CourseCreate.Name" class="text-danger form-text"></span>
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="CourseCreate.Description" class="form-label"></label>
-                        <input asp-for="CourseCreate.Description" class="form-control form-control-sm" />
-                        <span asp-validation-for="CourseCreate.Description" class="text-danger form-text"></span>
-                    </div>
-                    <div class="mb-2">
-                        <label asp-for="CourseCreate.HexColor" class="form-label">Color</label>
-                        <div class="input-group input-group-sm">
-                            <button x-on:click="color = '#' + Math.floor(Math.random() * 16777215).toString(16).padStart(6, '0'); isValid = true" type="button" class="btn btn-secondary mb-3"><i class="bi bi-arrow-counterclockwise"></i></button>
-                            <input x-model="color" x-on:input="isValid = isValidHexColor(color)" type="text" id="user-color" class="form-control mb-3" placeholder="Enter a color (e.g., #ff5733)" asp-for="CourseCreate.HexColor">
-                        </div>
-                        <div x-show="!isValid" class="text-danger">Invalid color format. Please enter a valid hex color.</div>
-                        <span asp-validation-for="CourseCreate.HexColor" class="text-danger form-text"></span>
-                    </div>
-                    <div class="mb-3" x-show="name.trim() !== ''">
-                        <span>Preview:</span>
-                        <span class="badge" :style="'background-color: ' + color" x-text="name"></span>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" id="submitButton" class="btn btn-primary">Add</button>
-                </div>
-            </form>
-
-        </div>
-    </div>
-</div>
 
 <div class="mb-2">
     <div class="d-flex justify-content-between align-items-end mb-3">
-        <h5 class="mb-0">Courses</h5>
-        @if (Model.Courses.Count > 0)
-        {
-            <a href="#" data-bs-toggle="modal" data-bs-target="#course-create-modal"><i class="bi bi-plus-lg me-2"></i>Add New Course</a>
-        }
-    </div>
-    <div class="row">
-        @foreach (var course in Model.Courses)
-        {
-            <div class="col-md-4 mb-4">
-                <a asp-page="/Manage/Courses/Index" asp-route-id="@course.Id" class="text-decoration-none">
-                    <div class="card h-100 card-hover" style="border-left: 5px solid @course.HexColor;">
-                        <div class="card-body d-flex flex-column justify-content-between">
-                            <div>
-                                <h5 class="card-title fw-bold">@course.Name</h5>
-                                <p class="card-text">@course.Description</p>
-                            </div>
-
-                            <div class="mt-3 d-flex align-items-center justify-content-between">
-                                <small class="text-muted">Incomplete Tasks: @(course.StudyTasks.Count(t => !t.Completed && !t.Archived))</small>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        }
-        @if (Model.Courses.Count == 0)
-        {
-            <div class="col-md-4 mb-4">
-                <a href="#" data-bs-toggle="modal" data-bs-target="#course-create-modal" class="text-decoration-none">
-                    <div class="card h-100 card-hover" style="border-left: 5px solid grey;">
-                        <div class="card-body d-flex flex-column justify-content-between">
-                            <div>
-                                <h5 class="text-body-tertiary text-opacity-50 fw-bold"><i class="bi bi-plus-lg me-2"></i>Add New Course</h5>
-                                <p class="card-text text-body-tertiary">Description...</p>
-                            </div>
-                            <div class="mt-3 d-flex align-items-center justify-content-between">
-                                <small class="text-muted text-body-tertiary">Status...</small>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-        }
-    </div>
-</div>
-
-@{
-    var nextTasks = Model.StudyTasks.Next(5);
-}
-
-<div class="mb-2">
-    <div class="d-flex justify-content-between align-items-end mb-3">
-        <div class="d-flex">
-            <h5 class="mb-0 me-2">Tasks Due Next</h5><a class="muted-link" asp-page="/Manage/Tasks/All">(see all)</a>
-        </div>
-        
-        @if (Model.StudyTasks.Where(u => !u.Completed).Count() > 0)
-        {
-            <a asp-page="/Timer/Index"><i class="bi bi-clock me-2"></i>Start Study Session</a>
-        }
+        <h5 class="mb-0">All Tasks</h5>
     </div>
     <ul class="list-group">
         <li class="list-group-item bg-body-tertiary">
@@ -256,12 +150,19 @@
                 </div>
             </div>
         </li>
-        @foreach (var task in nextTasks)
+        @foreach (var task in Model.StudyTasks)
         {
             <li class="list-group-item">
                 <div class="row align-items-center">
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="col-md-5">
+                            @if (task.Completed)
+                            {
+                                <i class="bi bi-check-circle text-success me-2"></i>
+                            } else
+                            {
+                                <i class="bi bi-x-circle text-secondary me-2"></i>
+                            }
                             <study-task-link task="@task"></study-task-link>
                             @if (task.TaskPriority != null)
                             {
@@ -300,7 +201,7 @@
                 </div>
             </li>
         }
-        @if (Model.StudyTasks.Where(u => !u.Completed).Count() == 0)
+        @if (Model.StudyTasks.Count == 0)
         {
             <li class="list-group-item custom-hover">
                 <a data-bs-toggle="modal" data-bs-target="#study-task-create-modal" class="row align-items-center">
@@ -326,17 +227,10 @@
     @foreach (var task in Model.StudyTasks)
     {
         @await Html.PartialAsync("/Pages/Shared/Snippets/StudyTaskSnippets/_EditStudyTaskModal.cshtml", new EditStudyTaskVM(
-            Model.TimeZone,
-            mapper.Map<StudyTaskUpdate>(task),
-            Model.TaskLabels,
-            Model.TaskPriorities
-        ))
+                Model.TimeZone,
+                mapper.Map<StudyTaskUpdate>(task),
+                Model.TaskLabels,
+                Model.TaskPriorities
+                ))
     }
 </div>
-
-
-
-@section Scripts {
-
-    <partial name="_ValidationScriptsPartial" />
-}
