--- a/src/Pomodoro.UI/Pages/Shared/_Layout.cshtml
+++ b/src/Pomodoro.UI/Pages/Shared/_Layout.cshtml
@@ -38,9 +38,9 @@
         <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm mb-3 py-3">
                 <div class="container">
-                    <a class="navbar-brand" :class="theme == 'dark' ? 'text-light' : 'text-dark'" asp-page="/Timer/Index">
-                        <h4>studypomo</h4>
-                    </a>
+                    <a class="navbar-brand" :class="theme == 'dark' ? 'text-light' : 'text-dark'" asp-page="/Manage/Index">
+                        <h4>studypomo</h4>                      
+                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
