--- a/src/Pomodoro.UI/Pages/Manage/Tasks/All.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Tasks/All.cshtml
@@ -260,7 +260,15 @@
 <div class="mb-2">
     <div class="d-flex justify-content-between align-items-end mb-3">
         <h5 class="mb-0">All Tasks</h5>
-        <div>
+        <div class="d-flex align-items-center">
+            @if (Model.FilterActive)
+            {
+                <a asp-page="/Manage/Tasks/All" asp-route-filter="@null">Clear Filter</a>
+                <div class="mt-1 h-100 mx-3">
+                    <div class="vr h-100"></div>
+                </div>
+                
+            }
             <a href="#" data-bs-toggle="modal" data-bs-target="#sort-modal">Filter <i class="bi bi-filter"></i></a>
         </div>
         
@@ -339,7 +347,7 @@
         {
             if (Model.FilterActive)
             {
-                <li class="list-group-item custom-hover">
+                <li class="list-group-item text-body-tertiary">
                     No matching tasks.
                 </li>
             } else
