--- a/src/Pomodoro.UI/Pages/Manage/Courses/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Courses/Index.cshtml
@@ -97,6 +97,11 @@
                             </a>
                             <div class="collapse" :class="hideMoreOptions ? 'hide' : 'show'" id="extra-options">
                                 <div class="mb-2">
+                                    <label asp-for="StudyTaskCreate.Description" class="form-label">Description:</label>
+                                    <textarea class="form-control form-control-sm" asp-for="StudyTaskCreate.Description"></textarea>
+                                    <span asp-validation-for="StudyTaskCreate.Description" class="text-danger form-text"></span>
+                                </div>
+                                <div class="mb-2">
                                     <label asp-for="StudyTaskCreate.TaskPriorityId" class="form-label">Priority:</label>
                                     <select class="form-control form-control-sm" asp-for="StudyTaskCreate.TaskPriorityId" asp-items="@Model.TaskPriorities">
                                         <option value="">None</option>
