Truncated long studytask names and added an ellipsis. Additionally added a delayed tooltip.

--- a/src/Pomodoro.UI/Pages/Manage/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Index.cshtml
@@ -266,7 +266,7 @@
             <li class="list-group-item">
                 <div class="row align-items-center">
                     <div class="d-flex align-items-center justify-content-between">
-                        <div class="col-md-5">
+                        <div class="col-md-5 d-flex flex-nowrap align-items-center">
                             <study-task-link task="@task"></study-task-link>
                             @if (task.TaskPriority != null)
                             {
