--- a/src/Pomodoro.UI/Pages/Manage/Tasks/All.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Tasks/All.cshtml
@@ -326,7 +326,7 @@
             <li class="list-group-item">
                 <div class="row align-items-center">
                     <div class="d-flex align-items-center justify-content-between">
-                        <div class="col-md-5">
+                        <div class="col-md-5 d-flex flex-nowrap align-items-center">
                             @if (task.Completed)
                             {
                                 <i class="bi bi-check-circle text-success me-2"></i>
