--- a/src/Pomodoro.UI/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
+++ b/src/Pomodoro.UI/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
@@ -22,7 +22,7 @@
                                 class="form-check-input me-2 mt-1" />
                         </div>
                         <div class="d-flex flex-column justify-content-between">
-                            <div class="d-flex align-items-center">
+                            <div class="d-flex align-items-center mw-50">
                                 <study-task-link task="@task" bold="true"></study-task-link>
                                 @if (task.TaskPriority != null)
                                 {
