--- a/src/Pomodoro.UI/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/Pomodoro.UI/Areas/Identity/Pages/Account/Login.cshtml
@@ -63,9 +63,9 @@
             <button id="login-submit" type="submit" class="btn btn-primary w-100">Log in</button>
 
             <div class="mt-3">
-                <a class="d-block mb-1" id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                <a class="d-block mb-1" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                <a class="d-block mb-1" id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                <a class="d-block text-muted mb-1" id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                <a class="d-block text-muted mb-1" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                <a class="d-block text-muted mb-1" id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
             </div>
         </form>
     </div>
