--- a/src/Pomodoro.UI/Pages/Manage/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Index.cshtml
@@ -253,9 +253,12 @@
                         <span><strong>Due</strong></span>
                     </div>
                     <div class="d-none d-lg-block col-md-1">
+                        <span><strong>Priority</strong></span>
+                    </div>
+                    <div class="d-none d-lg-block col-md-1">
                         <span><strong>Course</strong></span>
                     </div>
-                    <div class="col-md-2 text-end text-nowrap">
+                    <div class="col-md-1 text-end text-nowrap">
                         <span><strong>Actions</strong></span>
                     </div>
                 </div>
@@ -268,10 +271,6 @@
                     <div class="d-flex align-items-center justify-content-between">
                         <div class="col-md-5 d-flex flex-nowrap align-items-center">
                             <study-task-link task="@task"></study-task-link>
-                            @if (task.TaskPriority != null)
-                            {
-                                <badge priority="true" text="@task.TaskPriority.Level" color="@task.TaskPriority.DisplayHexColor"></badge>
-                            }
                             @foreach (var label in task.TaskLabels)
                             {
                                 <badge text="@label.Name" color="@label.HexColor"></badge>
@@ -281,12 +280,18 @@
                             <span class="text-muted">@task.Deadline.Humanize()</span>
                         </div>
                         <div class="d-none d-lg-block col-md-1">
+                            @if (task.TaskPriority != null)
+                            {
+                                <badge text="@task.TaskPriority.Level" color="@task.TaskPriority.DisplayHexColor"></badge>
+                            }
+                        </div>
+                        <div class="d-none d-lg-block col-md-1">
                             @if (task.Course != null)
                             {
                                 <badge text="@task.Course.Name" color="@task.Course.HexColor"></badge>
                             }
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-md-1">
                             <div class="d-flex align-items-center justify-content-end">
                                 <div class="dropdown">
                                     <i style="cursor: pointer" class="text-secondary bi bi-three-dots" data-bs-toggle="dropdown" aria-expanded="false"></i>
