--- a/src/Pomodoro.UI/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
+++ b/src/Pomodoro.UI/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
@@ -1,4 +1,5 @@
-﻿@using Pomodoro.Library.Models.Tables.StudyTaskEntities;
+﻿@using Humanizer
+@using Pomodoro.Library.Models.Tables.StudyTaskEntities;
 
 @model Pomodoro.UI.Pages.Timer.IndexModel
 
@@ -33,7 +34,13 @@
                                     <badge text="@label.Name" color="@label.HexColor"></badge>
                                 }
                             </div>
-                            <small>@task.Status()</small>
+                            @if (task.Deadline != null)
+                            {
+                                <small>Due @task.Deadline.Value.Humanize()</small>
+                            } else
+                            {
+                                <small>@task.Status()</small>
+                            }
                         </div>
                     </div>
                     <div class="d-flex align-items-center">
