Fixed chart height.

--- a/src/Pomodoro.UI/Pages/Manage/Courses/Partials/_Dynamic.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Courses/Partials/_Dynamic.cshtml
@@ -127,7 +127,7 @@
     @if (completedTasks.Count > 0)
     {
         <div class="col">
-            <h5 class="mb-3">Progress</h5>
+            <h5 class="mb-3">Activity</h5>
             @await Html.PartialAsync("Partials/_Progress")
         </div>
     }
