--- a/src/Pomodoro.UI/Pages/Manage/Courses/Partials/_Progress.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Courses/Partials/_Progress.cshtml
@@ -23,7 +23,7 @@
     }).ToList();
 }
 
-<div id="main" class="h-100" style="min-height: 200px;"></div>
+<div id="main" style="height: 300px;"></div>
 
 <script>
 
