Task <li> elements always show due dates instead of creation date.

--- a/src/Pomodoro.UI/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
+++ b/src/Pomodoro.UI/Pages/Timer/Partials/_UncompletedStudyTasks.cshtml
@@ -34,13 +34,7 @@
                                     <badge text="@label.Name" color="@label.HexColor"></badge>
                                 }
                             </div>
-                            @if (task.Deadline != null)
-                            {
-                                <small>Due @task.Deadline.Value.Humanize()</small>
-                            } else
-                            {
-                                <small>@task.Status()</small>
-                            }
+                            <small>Due @task.Deadline.Humanize()</small>
                         </div>
                     </div>
                     <div class="d-flex align-items-center">
