--- a/src/Pomodoro.UI/Pages/Manage/Courses/Partials/_Dynamic.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Courses/Partials/_Dynamic.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Pomodoro.UI.Pages.Manage.Courses.IndexModel
+@using Humanizer
 @using Pomodoro.Library.Models.Tables.StudyTaskEntities
 @using Pomodoro.UI.Pages.Shared.Snippets.StudyTaskSnippets
 
@@ -33,7 +34,7 @@
                                                    />
                                         </div>
                                         <div class="d-flex flex-column justify-content-between">
-                                            <div class="d-flex align-items-center">
+                                            <div class="d-flex align-items-center mw-50">
                                                 <study-task-link task="@task" bold="true"></study-task-link>
                                                 @if (task.TaskPriority != null)
                                                 {
@@ -44,7 +45,7 @@
                                                     <badge text="@label.Name" color="@label.HexColor"></badge>
                                                 }
                                             </div>
-                                            <small>@task.Status()</small>
+                                            <small>Due @task.Deadline.Humanize()</small>
                                         </div>
                                     </div>
                                     <div class="d-flex align-items-center">
