--- a/src/Pomodoro.UI/Pages/Manage/Index.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Index.cshtml
@@ -277,7 +277,7 @@
                             }
                         </div>
                         <div class="d-none d-md-block col-md-4">
-                            <span class="text-muted">@task.Deadline.Humanize()</span>
+                            <deadline date="@task.Deadline"></deadline>
                         </div>
                         <div class="d-none d-lg-block col-md-1">
                             @if (task.TaskPriority != null)
