Modified default filter parameters in "all tasks" page.

--- a/src/Pomodoro.UI/Pages/Manage/Tasks/All.cshtml
+++ b/src/Pomodoro.UI/Pages/Manage/Tasks/All.cshtml
@@ -319,7 +319,7 @@
         <div class="d-flex align-items-center">
             @if (Model.FilterActive)
             {
-                <a asp-page="/Manage/Tasks/All" asp-route-filter="@null">Clear Filter</a>
+                <a asp-page="/Manage/Tasks/All" asp-route-filter="@null">Reset Filter</a>
                 <div class="mt-1 h-100 mx-3">
                     <div class="vr h-100"></div>
                 </div>
